work in test makefile first work

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -Werror -Wextra
 
-$NAME = run_test
+NAME = run_test
 INC = -I../includes/ -I../Unity/src/
 OBJ_DIR = ./obj/
 SRC_UNITY = ../Unity/src/unity.c
@@ -10,30 +10,25 @@ TEST ?=
 RUNNER = runner.c
 
 SRC := $(TEST) 
-SRC += test_$(TEST)
+SRC += test_$(notdir $(basename $(TEST))).c
 SRC += $(SRC_UNITY)
 SRC += runner.c
 OBJ = $(patsubst %.c,$(OBJ_DIR)%.o,$(notdir $(SRC)))
 
-all: $(NAME)
-
-$(OBJ_DIR)%.o: $(SRC)%.c
-	$(CC) $(CFLAGS) $(INC) -o $@ -c $<
-
-$(NAME): $(OBJ)
-	$(CC) $(CFLAGS) $(INC) -o $@ $(OBJ)
+all: obj generate_runner $(NAME)
 
 obj:
 	mkdir -p $(OBJ_DIR)
 
-generate_runner: $(GENERATE_RUNNER)
+$(NAME): $(SRC)
+	$(CC) $(CFLAGS) $(INC) $(SRC) -o $@ 
+	./$(NAME)
+
+generate_runner:
 	@echo "Generando Runner para $(TEST)"
-	@$(GENERATE_RUNNER) $(TEST) $(RUNNER)
+	@$(GENERATE_RUNNER) test_$(notdir $(basename $(TEST))).c $(RUNNER)
 
-clean:
-	@rm -Rf $(OBJ_DIR)
-
-fclean: clean
+fclean: 
 	@rm -f $(NAME) $(RUNNER)
 
 print: 
@@ -41,6 +36,6 @@ print:
 	@echo $(OBJ)
 
 help:
-	@echo "make test TEST=src_file_to_check"
+	@echo "make TEST=src_file_to_check"
 
 .PHONY: test
