libft inclue in test

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,7 +2,9 @@ CC = gcc
 CFLAGS = -Wall -Werror -Wextra
 
 NAME = run_test
-INC = -I../includes/ -I../Unity/src/
+INC = -I../includes/ -I../Unity/src/ -I../libft42/
+LNK = -L ../libft42/ -lft
+LIBFT_DIR = ../libft42/
 OBJ_DIR = ./obj/
 SRC_UNITY = ../Unity/src/unity.c
 GENERATE_RUNNER = ../Unity/auto/generate_test_runner.rb
@@ -14,11 +16,15 @@ SRC += test_$(notdir $(basename $(TEST))).c
 SRC += $(SRC_UNITY)
 SRC += runner.c
 OBJ = $(patsubst %.c,$(OBJ_DIR)%.o,$(notdir $(SRC)))
+LIBFT = $(addprefix $(LIBFT_DIR), libft.a)
 
-all: fclean generate_runner $(NAME)
+all: fclean $(LIBFT) generate_runner $(NAME)
+
+$(LIBFT):
+	@make -C $(LIBFT_DIR)	
 
 $(NAME): $(SRC)
-	$(CC) $(CFLAGS) $(INC) $(SRC) -o $@ 
+	$(CC) $(SRC) $(CFLAGS) $(LNK) $(INC) -o $@ 
 	./$(NAME)
 
 generate_runner:
@@ -27,6 +33,7 @@ generate_runner:
 
 fclean: 
 	@rm -f $(NAME) $(RUNNER)
+	@make -C $(LIBFT_DIR) fclean
 
 print: 
 	@echo $(SRC)
